# mealie-client

./: .gitignore  .pdm-python  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.gitea/workflows/: README.md  ci-cd.yml  pr-ci.yml  tag-release.yml
.github/workflows/: ci.yml  release.yml
examples/: advanced_features.py  basic_usage.py
scripts/: README.md  bump_version.py  clean.ps1  upload_testpypi.ps1
src/mealie_sdk/: __init__.py  auth.py  client.py  exceptions.py
src/mealie_sdk/endpoints/: __init__.py  groups.py  meal_plans.py  recipes.py  shopping_lists.py  users.py
src/mealie_sdk/models/: __init__.py  common.py  group.py  meal_plan.py  recipe.py  shopping_list.py  user.py
